# index-score

./: .env.example  .gitignore  README.md  agents.md  config.yaml  main.py  pyproject.toml  todo.md
.agents/doc/: pr.md  大盘指数量化打分Agent需求文档.md
.agents/doc/architecture/: 01-architecture-design.md
.agents/doc/data-model/: 01-data-model.md  02-data-gap-and-tushare-migration.md  02-lixinger-api-integration.md
.agents/doc/engineering/: 01-engineering-setup.md
.agents/doc/scoring/: 01-scoring-model.md
.agents/doc/task-breakdown/: 01-task-breakdown.md
.agents/doc/ui/: 01-textual-terminal-ui-design.md  02-task8-implementation-plan.md
.agents/skills/belos-street/: skill.md
data/: 红利低波100_PB_市值加权_上市以来_20260510_135046.csv  红利低波100_PE-TTM_市值加权_上市以来_20260510_135001.csv  红利低波100_股息率_市值加权_上市以来_20260510_134119.csv
scripts/: README.md  calc_score_from_csv.py  preview_data.py  run_report.py  test_etf.py  test_fetch_apis.py  test_index_dailybasic_all.py  test_lixinger_api.py  test_llm_connectivity.py  test_tushare_index.py  test_tushare_mcp.py  test_tushare_valuation.py  test_valuation_apis.py
src/index_score/: __init__.py  main.py
src/index_score/config/: __init__.py  exceptions.py  loader.py  models.py
src/index_score/data/: __init__.py  cleaner.py  exceptions.py  fallback.py  fetcher.py  lixinger.py
src/index_score/llm/: __init__.py  agent.py  prompts.py  tools.py
src/index_score/report/: __init__.py  exporter.py  generator.py  template.py
tests/: test_config.py  test_data.py  test_integration.py  test_llm.py  test_report.py  test_scoring.py  test_ui.py
(+10 files in other folders)
