[project]
name = "index-score"
version = "0.1.0"
description = "大盘指数量化打分 CLI 工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "akshare>=1.14,<2",
    "tushare>=1.4,<2",
    "pandas>=2.0,<4",
    "langchain>=1.2,<3",
    "langchain-openai>=1.2,<3",
    "textual>=0.80,<9",
    "rich>=13.0,<16",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
index-score = "index_score.main:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
